package adapterPattern;

public interface NowUtil {
    public void newJiami();
}
