package adapterPattern;

public class ThirdSystem {
    public void jiami(){
        System.out.println("加密啦");
    }
}
